--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/.idea/inspectionProfiles
+/.idea/encodings.xml
+/.idea/firstpython.iml
+/.idea
